bug fixes,shift cards to blog

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ h1{
 }
 
 .navUL {
-  color: rgba(0, 0, 0, 0.596);
+    color: rgba(0, 0, 0, 0.596);
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -90,17 +90,12 @@ h1{
 .toggler {
     color: rgba(0, 0, 0, 0.596);;
     text-decoration: none;
-    display: flex;
     font-weight: bold;
-    position: absolute; 
-    padding: 0.5rem 1rem;
-    height: 100%;
 }
 
 .hero {
   background: url("../images/Slider.jpg") center center/cover no-repeat;
   color: rgba(0, 0, 0, 0.596);
-  /* text-shadow: 0px 1px 1.5px black; */
   height: 90vh;
   width: 100%;
   display: flex;
@@ -137,10 +132,15 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 50px 50px; */
-    
 }
 
+.cardArea {
+  margin-top: 150px;
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -194,13 +194,6 @@ img {
 img:hover {
   transform: scale(1.1);
   cursor: pointer;
-}
-
-.cardArea {
-  position: relative;
-  display: flex;
-  justify-content: space-evenly;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* About Page */
@@ -262,17 +255,22 @@ img:hover {
 @media screen and (max-width: 620px) {
     .navBar li a.toggler {
       position: sticky;
-      right: 10px;
-      top: 0;
-      display: inline-block;
+      display: inline;
     }
     .navBar li:not(:last-child) {display: none;}
   }
 
   
 @media screen and (max-width: 620px) {
+    
+    .navbar-container {
+      width: 100%;
+      justify-content: space-between;
+    }
+
     .navBar.responsive {
       position: fixed;
+      display: flex;
     }
     .navBar.responsive .toggler {
       position: absolute;
@@ -282,15 +280,14 @@ img:hover {
     .navBrand {
       font-size: large;
       font-weight: 500;
+      margin-left: 40px;
     }
     .navBar.responsive li{
-        float: none;
-        display: block;
-        text-align: left;
+        display: flex;
+        justify-content: center;
     }
     .navMenu {
         display: block;
-        padding-right: 10px;
     }
 
     .effect1 {
